# spark-connect-proxy

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: .gitignore  README.md  create_bucket_and_upload_bootstrap_script.sh  create_emr_log_bucket.sh  emr_ibis_bootstrap.sh  emr_spark_connect_proxy_bootstrap.sh  emr_start_spark_connect_proxy.sh  emr_start_spark_connect_proxy_remote.sh  provision_emr_spark_cluster.sh  start_spark_connect_server.sh
src/spark_connect_proxy/: config.py  logger.py  security.py  server.py
src/spark_connect_proxy/client_examples/: ibis_client_example.py
src/spark_connect_proxy/utilities/: create_jwt.py  tls_utilities.py
